...
private const val BLASTOISE_DESCRIPTION =
    "Blastoise has water spouts that protrude from its shell. The water spouts are very accurate. " +
        "They can shoot bullets of water with enough accuracy to strike empty cans from a distance of over 160 feet."

val SamplePokemonData =
    listOf(
        Pokemon(
            id = 1,
            name = "Bulbasaur",
            description =
                "Bulbasaur can be seen napping in bright sunlight. There is a seed on its back. " +
                    "By soaking up the sun's rays, the seed grows progressively larger.",
            typeOfPokemon = listOf("Grass", "Poison"),
            category = "Seed",
            image = 1,
...
