...
@Composable
private fun FilterMenuButtonIcon(state: FilterMenuState) {
    when (state) {
        FilterMenuState.Hidden ->
            Icon(
                painter = painterResource(id = R.drawable.ic_filter),
                contentDescription = "Show filters",
            )
        FilterMenuState.Visible ->
            Icon(
                painter = painterResource(id = R.drawable.ic_close),
                contentDescription = "Hide filters",
            )
...
