package des.c5inco.pokedexer.data.items

import des.c5inco.pokedexer.model.Item

val SampleItems = listOf(
    Item(
        id = 1,
        name = "Master Ball",
        description = "The best BALL with the ultimate performance. It will catch any wild POKéMON without fail.",
        sprite = "master-ball"
    ),
    Item(
        id = 2,
        name = "Ultra Ball",
        description = "A very high-grade BALL that offers a higher POKéMON catch rate than a GREAT BALL.",
        sprite = "ultra-ball"
    ),
    Item(
        id = 3,
        name = "Great Ball",
        description = "A good, quality BALL that offers a higher POKéMON catch rate than a standard POKé BALL.",
        sprite = "great-ball"
    ),
    Item(
        id = 4,
        name = "Poke Ball",
        description = "A BALL thrown to catch a wild POKéMON. It is designed in a capsule style.",
        sprite = "poke-ball"
    ),
    Item(
        id = 5,
        name = "Safari Ball",
        description = "A special BALL that is used only in the SAFARI ZONE. It is finished in a camouflage pattern.",
        sprite = "safari-ball"
    ),
    Item(
        id = 6,
        name = "Net Ball",
        description = "A somewhat different BALL that works especially well on WATER- and BUG-type POKéMON.",
        sprite = "net-ball"
    ),
    Item(
        id = 7,
        name = "Dive Ball",
        description = "A somewhat different BALL that works especially well on POKéMON deep in the sea.",
        sprite = "dive-ball"
    ),
    Item(
        id = 83,
        name = "Thunder Stone",
        description = "A peculiar stone that makes certain species of POKéMON evolve. It has a thunderbolt pattern.",
        sprite = "thunder-stone"
    ),
)